WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187793
Hitting RELEASE_ASSERT(!m_activeDOMObjectAdditionForbidden) under HTMLMediaElement::resume()
https://bugs.webkit.org/show_bug.cgi?id=187793
Summary
Hitting RELEASE_ASSERT(!m_activeDOMObjectAdditionForbidden) under HTMLMediaEl...
Antoine Quint
Reported
2018-07-18 17:27:53 PDT
HTMLMediaElement::resume() may end up calling prepareForLoad() which will end up calling configureMediaControls() which will in turn instantiate the media controls and run JS code, which will trigger RELEASE_ASSERT(!m_activeDOMObjectAdditionForbidden) in ScriptExecutionContext::didCreateActiveDOMObject(). We need to delay the call to prepareForLoad() in resume().
Attachments
Patch
(4.23 KB, patch)
2018-07-18 17:32 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2018-07-18 17:28:03 PDT
<
rdar://problem/42308469
>
Antoine Quint
Comment 2
2018-07-18 17:32:12 PDT
Created
attachment 345312
[details]
Patch
Chris Dumez
Comment 3
2018-07-18 18:18:06 PDT
Comment on
attachment 345312
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-07-19 06:38:22 PDT
Comment on
attachment 345312
[details]
Patch Clearing flags on attachment: 345312 Committed
r233982
: <
https://trac.webkit.org/changeset/233982
>
WebKit Commit Bot
Comment 5
2018-07-19 06:38:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug