Cherry-pick r233982. rdar://problem/42389208

Hitting RELEASE_ASSERT(!m_activeDOMObjectAdditionForbidden) under HTMLMediaElement::resume()
    https://bugs.webkit.org/show_bug.cgi?id=187793
    <rdar://problem/42308469>

    Patch by Antoine Quint <graouts@apple.com> on 2018-07-19
    Reviewed by Chris Dumez.

    Ensure we do not call JS under resume(), which would happen as a result of calling configureMediaControls() in prepareForLoad().

    * html/HTMLMediaElement.cpp:
    (WebCore::HTMLMediaElement::~HTMLMediaElement):
    (WebCore::HTMLMediaElement::contextDestroyed):
    (WebCore::HTMLMediaElement::stop):
    (WebCore::HTMLMediaElement::suspend):
    (WebCore::HTMLMediaElement::resume):
    * html/HTMLMediaElement.h:

    Canonical link: https://commits.webkit.org/202992@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233982 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/202900.37@safari-606-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606-branch@233991 268f45cc-cd09-0410-ab3c-d52691b4dbfc